--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -1,3 +1,8 @@
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Methods: "GET, PUT, POST, DELETE, OPTIONS"
+Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept"
+
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
     # Uncomment the line below, to enable HTTP authentication running PHP as a CGI.
